<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/pump_detail_toolbar"
            android:background="@color/color_dashboard_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    app:logo="@drawable/well_done_logo_small"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:navigationIcon="@drawable/ic_arrow_back_white_24dp" />

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/tv_pump_id"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="8dp"
            android:text="Pump # 4575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pump_detail_toolbar" />

        <TextView
            android:id="@+id/tv_last_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.851"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pump_detail_toolbar" />

        <TextView
            android:id="@+id/tv_last_upload_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/october_13_2019"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_last_upload" />

        <TextView
            android:id="@+id/tv_well_title"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/well"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pump_id" />

        <LinearLayout
            android:id="@+id/title_layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_well_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/well_depth"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:layout_marginStart="55dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:layout_marginStart="70dp"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/commune"-->
<!--                android:layout_marginStart="40dp"/>-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/value_layouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_layouts"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_well_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="33 feet"
                android:textStyle="bold"
                android:layout_marginStart="28dp"/>

            <TextView
                android:id="@+id/tv_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:text="Siem Reap"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Banteay Srei"
                android:layout_marginStart="60dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_commune_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/commune"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_layouts" />

        <TextView
            android:id="@+id/tv_commune_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Khun Ream"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_commune_title"
            app:layout_constraintTop_toBottomOf="@id/tv_commune_title"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_logs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            android:text="@string/logs"
            app:layout_constraintTop_toBottomOf="@id/tv_commune_value"
            app:layout_constraintStart_toStartOf="@id/tv_commune_value"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/logs_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/color_primary"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logs_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/date_filed"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/last_edited"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/comment"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="294dp"
            app:layout_constraintEnd_toEndOf="@+id/logs_header"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/logs_header"
            app:layout_constraintTop_toBottomOf="@id/logs_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
