<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/view_details_layout"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_details"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_zoom_in_black_24dp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tv_view_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/view_details"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_directions_layout"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_details_layout">

        <ImageView
            android:id="@+id/img_directions"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_directions_black_24dp" />

        <TextView
            android:id="@+id/tv_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/directions"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_logs_layout"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_directions_layout"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_log"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_chat_black_24dp" />
        <TextView
            android:id="@+id/tv_logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/logs"
            android:textColor="@android:color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>