<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.androidjavapoint.databindingsample.MainActivity">

    <data>
        <variable
            name="pump"
            type="com.versilistyson.welldone.data.remote.dto.SensorRecentResponse"/>
    </data>

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"

            tools:context=".ui.dashboard.fragment.PumpDetailFragment">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:background="@color/color_dashboard_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.Toolbar
                        app:logo="@drawable/well_done_logo_small"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </com.google.android.material.appbar.AppBarLayout>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="92dp"
                android:src="@drawable/ic_keyboard_backspace_white_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_pump"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="132dp"
                android:layout_marginTop="92dp"
                android:text="@{@string/pump_num(pump.physical_id)}"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_view_padcounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:layout_marginTop="36dp"
                android:text="@string/view_pad_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pump" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="228dp"
                android:text="@string/location"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_district_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/district"
                android:textColor="#C5A2A2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_data_fetch_data" />

            <TextView
                android:id="@+id/tv_well_depth_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="168dp"
                android:layout_marginTop="80dp"
                android:text="@string/well_depth"
                android:textColor="#C5A2A2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/map" />

            <TextView
                android:id="@+id/tv_commune_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="276dp"
                android:layout_marginTop="80dp"
                android:text="@string/commune"
                android:textColor="#C5A2A2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/map" />

            <TextView
                android:id="@+id/tv_province_data"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="8dp"
                android:text="@{pump.province_name}"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_district_data"
                app:layout_constraintTop_toBottomOf="@id/tv_province" />

            <TextView
                android:id="@+id/tv_commune_data"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="276dp"
                android:layout_marginTop="8dp"
                android:text="@{pump.commune_name}"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_commune_title" />

            <TextView
                android:id="@+id/tv_well_depth_data"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="8dp"
                android:text="@{@string/well_depth_data(Integer.toString(pump.depth))}"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tv_last_data_fetch_data"
                app:layout_constraintTop_toBottomOf="@id/tv_well_depth_title" />

            <TextView
                android:id="@+id/tv_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="168dp"
                android:layout_marginTop="24dp"
                android:text="@string/province"
                android:textColor="#C5A2A2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_well_depth_data" />

            <TextView
                android:id="@+id/tv_district_data"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@{pump.district_name}"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_district_title" />

            <TextView
                android:id="@+id/tv_last_data_fetch_data"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@{pump.data_finished}"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_last_data_fetch_title" />

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="272dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_last_data_fetch_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:text="@string/last_data_fetch"
                android:textColor="#C5A2A2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_data" />

            <TextView
                android:id="@+id/tv_data"
                style="@style/TextOnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="488dp"
                android:text="@string/data"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
